# example_fs_ds_repo

./: .gitignore  README.md  pyproject.toml  requirements.txt
features/_example_ml_use_case_repo/models/fraud_detection/notebooks/: 04_experimentation.ipynb  experimentation_no_fs.ipynb  experimentation_with_fs.ipynb
features/dataform/definitions/transactions/_sources/: tx.sqlx  txlabels.sqlx
features/dataform/definitions/transactions/feature_creation/: transactions__feature_creation_sample.sqlx
features/dataform/definitions/transactions/staging/: transactions__preprocessing.sqlx
features/dataform/includes/: incremental_update.js  rolling_windows.js
features/dataform_project/: .df-credentials.json  dataform.json  package-lock.json  package.json
features/dataform_project/definitions/transactions/feature_creation/: transactions__feature_creation_sample.sqlx
features/dataform_project/includes/: incremental_update.js  rolling_windows.js
features/dbt/: dbt_project.yml
features/dbt/macros/: incremental_update_macro.sql  rolling_windows.sql
features/dbt/models/transactions/: schema.yml
features/dbt/models/transactions/feature_creation/: transactions__feature_creation_sample.sql
features/dbt_project/: dbt_project.yml  fs_config.yml
features/dbt_project/macros/: incremental_update_macro.sql
features/dbt_project/models/transactions/: schema.yml  sources.yml
features/dbt_project1/: dbt_project.yml  fs_config.yml
features/dbt_project1/models/transactions/: schema.yml
tools/: copy_bigquery_data.py  manual_ingestion_to_fs.py
(+3 files in other folders)
